--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -16885,7 +16885,7 @@ body.page-ready .bottom-new {
   flex-direction: column;
   gap: 50px;
   align-items: center;
-  margin-top: 200px;
+  margin-top: 60px;
 }
 
 .progress-section-container>h2{
@@ -16945,9 +16945,17 @@ body.page-ready .bottom-new {
 
 .progress-part:nth-child(3) .part-img>img:nth-child(2){
   position: absolute;
-  top: 0%;
-  left: -40px;
+  top: -3%;
+  left: -100px;
   transform: translateY(-0%);
+}
+
+.progress-part:nth-child(2) .part-img>img:nth-child(2){
+  position: absolute;
+top: 5%;
+right: -40px;
+transform: translateY(-50%);
+height: 110px;
 }
 
 .part-text h5{
@@ -17009,6 +17017,13 @@ body.page-ready .bottom-new {
   opacity: 0;
   transform: translate(-30px, -0%)!important;
   transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+  height: 215px;
+}
+
+.progress-part:nth-child(2) .come-img {
+  opacity: 0;
+  transform: translate(30px, -50%)!important;
+  transition: opacity 0.6s ease-out, transform 0.6s ease-out;
 }
 
 .progress-part:nth-child(1) .come-img.visible {
@@ -17019,6 +17034,12 @@ body.page-ready .bottom-new {
 .progress-part:nth-child(3) .come-img.visible {
   opacity: 1;
   transform: translate(0, -0%)!important;
+}
+
+
+.progress-part:nth-child(2) .come-img.visible {
+  opacity: 1;
+  transform: translate(0, -50%)!important;
 }
 
 .progress-part .part-text{
@@ -17053,6 +17074,20 @@ body.page-ready .bottom-new {
 }
 
 @media only screen and (max-width: 1024px) {
+  .progress-part:nth-child(1) .part-img>img:nth-child(2){
+    height: 150px;
+  }
+
+  .progress-part:nth-child(2) .part-img>img:nth-child(2){
+    height: 85px;
+    right: 00px;
+  }
+
+  .progress-part:nth-child(3) .part-img>img:nth-child(2){
+    height: 130px;
+    left: 0;
+  }
+
   .marquee-inner img {
     aspect-ratio: auto;
     height: 130px;
